syntax = "proto3";

option go_package = "./pb/mail";

package mail;

// 返回码
enum Code {
  OK = 0; // 成功
  Failed = 1; // 失败
  Abnormal = 2; // 解析异常
  IllegalParams = 3; // 参数非法
  IncorrectAccountOrPassword = 4; // 账号或密码错误
}

// 邮件状态
enum Status {
  Unread = 0; // 未读
  Read = 1; // 已读
  Received = 2; // 已领取
}

// 拉取邮件列表请求
message FetchListReq {
  int32 Size = 1; // 每页大小
  int32 Page = 2; // 当前页
}

// 拉取邮件列表响应
message FetchListRes {
  Code Code = 1; // 错误码
  bool HasMore = 2; // 是否还有更多
  repeated Mail List = 3; // 邮件列表
}

// 邮件
message Mail {
  string ID = 1; // 邮件ID
  string Title = 2; // 邮件标题
  string Content = 3; // 邮件内容
  Sender Sender = 4; // 邮件发送者
  repeated Attachment Attachments = 5; // 邮件附件
  Status Status = 6; // 邮件状态
  int64 SendTime = 7; // 发送时间
}

// 发送者
message Sender {
  int64 ID = 1; // 发送者ID，官方发送者ID为0，系统邮件为负数，用户发送的为正数
  string Name = 2; // 发送者名称
  string Icon = 3; // 发送者图标，仅在发送者为用户时存在
}

// 附件
message Attachment {
  int32 PropID = 1; // 道具ID
  int32 PropNum = 2; // 道具数量
}

// 读取邮件请求
message ReadReq {
  int64 MailID = 1; // 邮件ID
}

// 读取邮件响应
message ReadRes {
  Code Code = 1; // 错误码
}